--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
-    "nes.css": "^2.3.0",
-    "vue": "^2.6.10",
-    "vuenes.css": "^2.1.0"
+    "vue": "^2.6.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
